// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardButton /> renders the button disabled 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="wizard-button"
  disabled={true}
>
  <Icon
    name="check"
    type="fa"
  />
   
  Launch
</Button>
`;

exports[`<WizardButton /> renders the button with type launch 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="wizard-button"
  disabled={false}
>
  <Icon
    name="check"
    type="fa"
  />
   
  Launch
</Button>
`;

exports[`<WizardButton /> renders the button with type next 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="wizard-button"
  disabled={false}
>
  <Icon
    name="angle-right"
    type="fa"
  />
   
  Next
</Button>
`;
